feat: add 2FA auth
